--- a/GreenMonkeysMVC/appsettings.json
+++ b/GreenMonkeysMVC/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=BangazonWorkforce;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
